force-app/main/default/objects/Convenio__c/Convenio__c.object-meta.xml
<CustomObject>
    <description>Objeto customizado para carga de dados do SOE (Contratos / Convênios), a partir de modelo padrão.</description>
    <label>Convênio</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Código do Convênio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convênios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>