force-app/main/default/objects/Convenio__c/fields/AditivoPE__c.field-meta.xml
<CustomField>
    <fullName>AditivoPE__c</fullName>
    <label>Aditivo PE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>