force-app/main/default/objects/Convenio__c/fields/AdmCobranca__c.field-meta.xml
<CustomField>
    <fullName>AdmCobranca__c</fullName>
    <label>Adm Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>