force-app/main/default/objects/Convenio__c/fields/Apoio__c.field-meta.xml
<CustomField>
    <fullName>Apoio__c</fullName>
    <label>Apoio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>