force-app/main/default/objects/Convenio__c/fields/AprendizOuEstagiario__c.field-meta.xml
<CustomField>
    <fullName>AprendizOuEstagiario__c</fullName>
    <label>Aprendiz ou Estagiário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>