force-app/main/default/objects/Convenio__c/fields/AtivaOuInativa__c.field-meta.xml
<CustomField>
    <fullName>AtivaOuInativa__c</fullName>
    <label>Ativa ou Inativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>