force-app/main/default/objects/Convenio__c/fields/AtuacaoProgramaAprendiz__c.field-meta.xml
<CustomField>
    <fullName>AtuacaoProgramaAprendiz__c</fullName>
    <label>Atuação Programa Aprendiz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>