force-app/main/default/objects/Convenio__c/fields/C_digo_do_consultor__c.field-meta.xml
<CustomField>
    <fullName>C_digo_do_consultor__c</fullName>
    <label>Código do consultor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>