force-app/main/default/objects/Convenio__c/fields/CargoDoResponsavelPelaContrata_o__c.field-meta.xml
<CustomField>
    <fullName>CargoDoResponsavelPelaContrata_o__c</fullName>
    <label>Cargo do responsável pela contratação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>