force-app/main/default/objects/Convenio__c/fields/CargoDoResponsavelPelaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>CargoDoResponsavelPelaEmpresa__c</fullName>
    <label>Cargo do responsável pela empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>