force-app/main/default/objects/Convenio__c/fields/CepDeCobranca__c.field-meta.xml
<CustomField>
    <fullName>CepDeCobranca__c</fullName>
    <label>CEP de cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>