force-app/main/default/objects/Convenio__c/fields/CiAprendiz__c.field-meta.xml
<CustomField>
    <fullName>CiAprendiz__c</fullName>
    <label>CI Aprendiz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>