force-app/main/default/objects/Convenio__c/fields/CiAtual__c.field-meta.xml
<CustomField>
    <fullName>CiAtual__c</fullName>
    <label>CI Estágio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>