force-app/main/default/objects/Convenio__c/fields/CidadeDeCobranca__c.field-meta.xml
<CustomField>
    <fullName>CidadeDeCobranca__c</fullName>
    <label>Cidade de cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>