force-app/main/default/objects/Convenio__c/fields/CiUnica__c.field-meta.xml
<CustomField>
    <fullName>CiUnica__c</fullName>
    <label>CI Única</label>
    <length>1</length>
    <type>Text</type>
</CustomField>