force-app/main/default/objects/Convenio__c/fields/CodigoDaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>CodigoDaEmpresa__c</fullName>
    <label>Código da empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>