force-app/main/default/objects/Convenio__c/fields/CodigoDaFilial__c.field-meta.xml
<CustomField>
    <fullName>CodigoDaFilial__c</fullName>
    <label>Código da Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>