force-app/main/default/objects/Convenio__c/fields/CodigoDoDepartamento__c.field-meta.xml
<CustomField>
    <fullName>CodigoDoDepartamento__c</fullName>
    <label>Código do departamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>