force-app/main/default/objects/Convenio__c/fields/CodigoDoProprietarioDaConta__c.field-meta.xml
<CustomField>
    <fullName>CodigoDoProprietarioDaConta__c</fullName>
    <externalId>true</externalId>
    <label>Código do proprietário da Conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>