force-app/main/default/objects/Convenio__c/fields/Consultor_Respons_vel__c.field-meta.xml
<CustomField>
    <fullName>Consultor_Respons_vel__c</fullName>
    <label>Consultor Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>