force-app/main/default/objects/Convenio__c/fields/DataDeInicioDoConvenio__c.field-meta.xml
<CustomField>
    <fullName>DataDeInicioDoConvenio__c</fullName>
    <label>Data de Início do Convênio</label>
    <type>Date</type>
</CustomField>