force-app/main/default/objects/Convenio__c/fields/DescricaoDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>DescricaoDaUnidade__c</fullName>
    <label>Descrição da unidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>