force-app/main/default/objects/Convenio__c/fields/DescricaoDaUnidadeAdministrativa__c.field-meta.xml
<CustomField>
    <fullName>DescricaoDaUnidadeAdministrativa__c</fullName>
    <label>Descrição da unidade administrativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>