force-app/main/default/objects/Convenio__c/fields/EmailDeCobranca__c.field-meta.xml
<CustomField>
    <fullName>EmailDeCobranca__c</fullName>
    <label>Email de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>