force-app/main/default/objects/Convenio__c/fields/EnderecoDeCobranca__c.field-meta.xml
<CustomField>
    <fullName>EnderecoDeCobranca__c</fullName>
    <label>Endereço de cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>