force-app/main/default/objects/Convenio__c/fields/EstadoProvinciaDeCobranca__c.field-meta.xml
<CustomField>
    <fullName>EstadoProvinciaDeCobranca__c</fullName>
    <label>Estado / Província de cobrança</label>
    <length>4</length>
    <type>Text</type>
</CustomField>