force-app/main/default/objects/Convenio__c/fields/FUP__c.field-meta.xml
<CustomField>
    <fullName>FUP__c</fullName>
    <label>FUP</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>