force-app/main/default/objects/Convenio__c/fields/GrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>GrupoEconomico__c</fullName>
    <label>Grupo econômico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>