force-app/main/default/objects/Convenio__c/fields/Nome_do_consultor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_consultor__c</fullName>
    <label>Nome do consultor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>