force-app/main/default/objects/Convenio__c/fields/NomeDoResponsavelPelaContratacao__c.field-meta.xml
<CustomField>
    <fullName>NomeDoResponsavelPelaContratacao__c</fullName>
    <label>Nome do responsável pela contratação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>