force-app/main/default/objects/Convenio__c/fields/NomeDoResponsavelPelaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>NomeDoResponsavelPelaEmpresa__c</fullName>
    <label>Nome do responsável pela empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>