force-app/main/default/objects/Convenio__c/fields/PaisDeCobranca__c.field-meta.xml
<CustomField>
    <fullName>PaisDeCobranca__c</fullName>
    <label>País de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>