force-app/main/default/objects/Convenio__c/fields/ProgramaAprendiz__c.field-meta.xml
<CustomField>
    <fullName>ProgramaAprendiz__c</fullName>
    <label>Programa Aprendiz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>