force-app/main/default/objects/Convenio__c/fields/ProprietariaDaConta__c.field-meta.xml
<CustomField>
    <fullName>ProprietariaDaConta__c</fullName>
    <label>Carteira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>