force-app/main/default/objects/Convenio__c/fields/QuantidadeDeAprendizes__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDeAprendizes__c</fullName>
    <label>Quantidade de Aprendizes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>