force-app/main/default/objects/Convenio__c/fields/QuantidadeDeDiasInativo__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDeDiasInativo__c</fullName>
    <label>Quantidade de dias inativo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>