force-app/main/default/objects/Convenio__c/fields/QuantidadeDeEstagiarios__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDeEstagiarios__c</fullName>
    <label>Quantidade de estagiários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>