force-app/main/default/objects/Convenio__c/fields/RH_Centralizado__c.field-meta.xml
<CustomField>
    <fullName>RH_Centralizado__c</fullName>
    <label>RH Centralizado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>