force-app/main/default/objects/Convenio__c/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>