force-app/main/default/objects/Convenio__c/fields/TipoDeConvenio__c.field-meta.xml
<CustomField>
    <fullName>TipoDeConvenio__c</fullName>
    <label>Tipo de convênio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>