force-app/main/default/objects/Convenio__c/fields/TotalDeAprendizesAtivos__c.field-meta.xml
<CustomField>
    <fullName>TotalDeAprendizesAtivos__c</fullName>
    <label>Total de aprendizes ativos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>