force-app/main/default/objects/Convenio__c/fields/TotalDeEstagiariosAtivos__c.field-meta.xml
<CustomField>
    <fullName>TotalDeEstagiariosAtivos__c</fullName>
    <label>Total de Estagiários Ativos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>