force-app/main/default/objects/Convenio__c/fields/TotalVagas__c.field-meta.xml
<CustomField>
    <fullName>TotalVagas__c</fullName>
    <label>Total Vagas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>