force-app/main/default/objects/Convenio__c/fields/UnidadeAdmCobranca__c.field-meta.xml
<CustomField>
    <fullName>UnidadeAdmCobranca__c</fullName>
    <label>Unidade Adm Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>