force-app/main/default/objects/Convenio__c/fields/UnidadeAdministrativa__c.field-meta.xml
<CustomField>
    <fullName>UnidadeAdministrativa__c</fullName>
    <label>Unidade administrativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>