force-app/main/default/objects/Convenio__c/fields/UnidadeDaFilial__c.field-meta.xml
<CustomField>
    <fullName>UnidadeDaFilial__c</fullName>
    <label>Unidade da Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>