force-app/main/default/objects/Convenio__c/fields/VencimentoDoProximoContrato__c.field-meta.xml
<CustomField>
    <fullName>VencimentoDoProximoContrato__c</fullName>
    <label>Vencimento do próximo contrato</label>
    <type>Date</type>
</CustomField>