force-app/main/default/objects/Convenio__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Convenio__c</columns>
    <columns>RazaoSocial__c</columns>
    <columns>CNPJ__c</columns>
    <columns>Consultor_Respons_vel__c</columns>
    <columns>Email__c</columns>
    <columns>Celular__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>